src/bison.output
Терминалы не используются в грамматике

   BREAK
   STATEMENTS
   DECLARATION
   FIELD_DECLARATION
   RETURN_STATEMENT
   BREAK_STATEMENT
   INVOKE_STATEMENT


Грамматика

    0 $accept: GOAL $end

    1 GOAL: MAIN_CLASS CLASS_LIST

    2 CLASS_LIST: CLASS_LIST CLASS_DECLARATION
    3           | %empty

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    5 CLASS_DECLARATION: CLASS ID BASE_CLASS '{' VAR_AND_METHOD_DECLARATION '}'

    6 BASE_CLASS: %empty
    7           | EXTENDS ID

    8 VAR_AND_METHOD_DECLARATION: VAR_DECLARATION VAR_AND_METHOD_DECLARATION
    9                           | METHOD_DECLARATION VAR_AND_METHOD_DECLARATION
   10                           | %empty

   11 VAR_DECLARATION: TYPE ID ';'

   12 METHOD_DECLARATION: METHOD_HEADER '{' METHOD_BODY '}'

   13 METHOD_HEADER: PUBLIC TYPE ID '(' ARGS_DECLARATION ')'

   14 ARGS_DECLARATION: PARAM_DECLARATION
   15                 | ARGS_DECLARATION ',' PARAM_DECLARATION

   16 PARAM_DECLARATION: TYPE ID
   17                  | %empty

   18 TYPE: INT_ARRAY
   19     | BOOL
   20     | INT
   21     | ID

   22 INT_ARRAY: INT '[' ']'

   23 METHOD_BODY: VAR_AND_STATEMENT_DECLARATIONS RETURN EXPR ';'

   24 VAR_AND_STATEMENT_DECLARATIONS: VAR_DECLARATION VAR_AND_STATEMENT_DECLARATIONS
   25                               | STATEMENT_DECLARATION

   26 STATEMENT_DECLARATION: STATEMENT STATEMENT_DECLARATION
   27                      | %empty

   28 STATEMENT: '{' STATEMENT_DECLARATION '}'
   29          | IF_STATEMENT
   30          | WHILE_STATEMENT
   31          | PRINT_STATEMENT
   32          | ASSIGNMENT
   33          | ARRAY_ASSIGNMENT

   34 IF_STATEMENT: IF '(' EXPR ')' STATEMENT ELSE STATEMENT

   35 WHILE_STATEMENT: WHILE '(' EXPR ')' STATEMENT

   36 PRINT_STATEMENT: PRINT '(' EXPR ')' ';'

   37 ASSIGNMENT: ID '=' EXPR ';'

   38 ARRAY_ASSIGNMENT: ID '[' EXPR ']' '=' EXPR ';'

   39 EXPR: EXPR '+' EXPR
   40     | EXPR '-' EXPR
   41     | EXPR '/' EXPR
   42     | EXPR '%' EXPR
   43     | EXPR '*' EXPR
   44     | EXPR AND EXPR
   45     | EXPR OR EXPR
   46     | EXPR LT EXPR
   47     | EXPR LE EXPR
   48     | EXPR GT EXPR
   49     | EXPR GE EXPR
   50     | EXPR NEQ EXPR
   51     | EXPR EQ EXPR
   52     | NOT EXPR
   53     | '(' EXPR ')'
   54     | NEW_EXPR
   55     | ID '[' EXPR ']'
   56     | ID
   57     | THIS
   58     | CONSTANT
   59     | EXPR '[' EXPR ']'
   60     | EXPR '.' LENGTH
   61     | EXPR '.' ID '(' PARAMS ')'

   62 CONSTANT: INT_VALUE
   63         | BOOL_VALUE

   64 PARAMS: %empty
   65       | EXPR
   66       | PARAMS ',' EXPR

   67 NEW_EXPR: NEW INT '[' EXPR ']'
   68         | NEW ID '(' ')'


Терминальные символы с правилами, в которых они появляются

$end (0) 0
'%' (37) 42
'(' (40) 4 13 34 35 36 53 61 68
')' (41) 4 13 34 35 36 53 61 68
'*' (42) 43
'+' (43) 39
',' (44) 15 66
'-' (45) 40
'.' (46) 60 61
'/' (47) 41
';' (59) 11 23 36 37 38
'=' (61) 37 38
'[' (91) 22 38 55 59 67
']' (93) 22 38 55 59 67
'{' (123) 4 5 12 28
'}' (125) 4 5 12 28
error (256)
MAIN (258) 4
MAIN_ARGS (259) 4
PUBLIC (260) 4 13
VOID (261) 4
STATIC (262) 4
CLASS (263) 4 5
RETURN (264) 23
WHILE (265) 35
BREAK (266)
PRINT (267) 36
LENGTH (268) 60
NEW (269) 67 68
EXTENDS (270) 7
THIS (271) 57
INT (272) 20 22 67
BOOL (273) 19
ID (274) 4 5 7 11 13 16 21 37 38 55 56 61 68
INT_VALUE (275) 62
BOOL_VALUE (276) 63
STATEMENTS (277)
DECLARATION (278)
FIELD_DECLARATION (279)
RETURN_STATEMENT (280)
BREAK_STATEMENT (281)
INVOKE_STATEMENT (282)
OR (283) 45
AND (284) 44
GE (285) 49
LE (286) 47
GT (287) 48
LT (288) 46
EQ (289) 51
NEQ (290) 50
NOT (291) 52
IF (292) 34
ELSE (293) 34


Нетерминальные символы с правилами, в которых они появляются

$accept (54)
    налево: 0
GOAL (55)
    налево: 1, направо: 0
CLASS_LIST (56)
    налево: 2 3, направо: 1 2
MAIN_CLASS (57)
    налево: 4, направо: 1
CLASS_DECLARATION (58)
    налево: 5, направо: 2
BASE_CLASS (59)
    налево: 6 7, направо: 5
VAR_AND_METHOD_DECLARATION (60)
    налево: 8 9 10, направо: 5 8 9
VAR_DECLARATION (61)
    налево: 11, направо: 8 24
METHOD_DECLARATION (62)
    налево: 12, направо: 9
METHOD_HEADER (63)
    налево: 13, направо: 12
ARGS_DECLARATION (64)
    налево: 14 15, направо: 13 15
PARAM_DECLARATION (65)
    налево: 16 17, направо: 14 15
TYPE (66)
    налево: 18 19 20 21, направо: 11 13 16
INT_ARRAY (67)
    налево: 22, направо: 18
METHOD_BODY (68)
    налево: 23, направо: 12
VAR_AND_STATEMENT_DECLARATIONS (69)
    налево: 24 25, направо: 23 24
STATEMENT_DECLARATION (70)
    налево: 26 27, направо: 25 26 28
STATEMENT (71)
    налево: 28 29 30 31 32 33, направо: 4 26 34 35
IF_STATEMENT (72)
    налево: 34, направо: 29
WHILE_STATEMENT (73)
    налево: 35, направо: 30
PRINT_STATEMENT (74)
    налево: 36, направо: 31
ASSIGNMENT (75)
    налево: 37, направо: 32
ARRAY_ASSIGNMENT (76)
    налево: 38, направо: 33
EXPR (77)
    налево: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61, направо: 23 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53 55 59 60 61 65 66 67
CONSTANT (78)
    налево: 62 63, направо: 58
PARAMS (79)
    налево: 64 65 66, направо: 61 66
NEW_EXPR (80)
    налево: 67 68, направо: 54


State 0

    0 $accept: . GOAL $end

    CLASS  сдвиг, и переход в состояние 1

    GOAL        переход в состояние 2
    MAIN_CLASS  переход в состояние 3


State 1

    4 MAIN_CLASS: CLASS . ID '{' PUBLIC STATIC VOID MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    ID  сдвиг, и переход в состояние 4


State 2

    0 $accept: GOAL . $end

    $end  сдвиг, и переход в состояние 5


State 3

    1 GOAL: MAIN_CLASS . CLASS_LIST

    $default  вывод с использованием правила 3 (CLASS_LIST)

    CLASS_LIST  переход в состояние 6


State 4

    4 MAIN_CLASS: CLASS ID . '{' PUBLIC STATIC VOID MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    '{'  сдвиг, и переход в состояние 7


State 5

    0 $accept: GOAL $end .

    $default  принять


State 6

    1 GOAL: MAIN_CLASS CLASS_LIST .
    2 CLASS_LIST: CLASS_LIST . CLASS_DECLARATION

    CLASS  сдвиг, и переход в состояние 8

    $default  вывод с использованием правила 1 (GOAL)

    CLASS_DECLARATION  переход в состояние 9


State 7

    4 MAIN_CLASS: CLASS ID '{' . PUBLIC STATIC VOID MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    PUBLIC  сдвиг, и переход в состояние 10


State 8

    5 CLASS_DECLARATION: CLASS . ID BASE_CLASS '{' VAR_AND_METHOD_DECLARATION '}'

    ID  сдвиг, и переход в состояние 11


State 9

    2 CLASS_LIST: CLASS_LIST CLASS_DECLARATION .

    $default  вывод с использованием правила 2 (CLASS_LIST)


State 10

    4 MAIN_CLASS: CLASS ID '{' PUBLIC . STATIC VOID MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    STATIC  сдвиг, и переход в состояние 12


State 11

    5 CLASS_DECLARATION: CLASS ID . BASE_CLASS '{' VAR_AND_METHOD_DECLARATION '}'

    EXTENDS  сдвиг, и переход в состояние 13

    $default  вывод с использованием правила 6 (BASE_CLASS)

    BASE_CLASS  переход в состояние 14


State 12

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC . VOID MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    VOID  сдвиг, и переход в состояние 15


State 13

    7 BASE_CLASS: EXTENDS . ID

    ID  сдвиг, и переход в состояние 16


State 14

    5 CLASS_DECLARATION: CLASS ID BASE_CLASS . '{' VAR_AND_METHOD_DECLARATION '}'

    '{'  сдвиг, и переход в состояние 17


State 15

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC VOID . MAIN '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    MAIN  сдвиг, и переход в состояние 18


State 16

    7 BASE_CLASS: EXTENDS ID .

    $default  вывод с использованием правила 7 (BASE_CLASS)


State 17

    5 CLASS_DECLARATION: CLASS ID BASE_CLASS '{' . VAR_AND_METHOD_DECLARATION '}'

    PUBLIC  сдвиг, и переход в состояние 19
    INT     сдвиг, и переход в состояние 20
    BOOL    сдвиг, и переход в состояние 21
    ID      сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 10 (VAR_AND_METHOD_DECLARATION)

    VAR_AND_METHOD_DECLARATION  переход в состояние 23
    VAR_DECLARATION             переход в состояние 24
    METHOD_DECLARATION          переход в состояние 25
    METHOD_HEADER               переход в состояние 26
    TYPE                        переход в состояние 27
    INT_ARRAY                   переход в состояние 28


State 18

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC VOID MAIN . '(' MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    '('  сдвиг, и переход в состояние 29


State 19

   13 METHOD_HEADER: PUBLIC . TYPE ID '(' ARGS_DECLARATION ')'

    INT   сдвиг, и переход в состояние 20
    BOOL  сдвиг, и переход в состояние 21
    ID    сдвиг, и переход в состояние 22

    TYPE       переход в состояние 30
    INT_ARRAY  переход в состояние 28


State 20

   20 TYPE: INT .
   22 INT_ARRAY: INT . '[' ']'

    '['  сдвиг, и переход в состояние 31

    $default  вывод с использованием правила 20 (TYPE)


State 21

   19 TYPE: BOOL .

    $default  вывод с использованием правила 19 (TYPE)


State 22

   21 TYPE: ID .

    $default  вывод с использованием правила 21 (TYPE)


State 23

    5 CLASS_DECLARATION: CLASS ID BASE_CLASS '{' VAR_AND_METHOD_DECLARATION . '}'

    '}'  сдвиг, и переход в состояние 32


State 24

    8 VAR_AND_METHOD_DECLARATION: VAR_DECLARATION . VAR_AND_METHOD_DECLARATION

    PUBLIC  сдвиг, и переход в состояние 19
    INT     сдвиг, и переход в состояние 20
    BOOL    сдвиг, и переход в состояние 21
    ID      сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 10 (VAR_AND_METHOD_DECLARATION)

    VAR_AND_METHOD_DECLARATION  переход в состояние 33
    VAR_DECLARATION             переход в состояние 24
    METHOD_DECLARATION          переход в состояние 25
    METHOD_HEADER               переход в состояние 26
    TYPE                        переход в состояние 27
    INT_ARRAY                   переход в состояние 28


State 25

    9 VAR_AND_METHOD_DECLARATION: METHOD_DECLARATION . VAR_AND_METHOD_DECLARATION

    PUBLIC  сдвиг, и переход в состояние 19
    INT     сдвиг, и переход в состояние 20
    BOOL    сдвиг, и переход в состояние 21
    ID      сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 10 (VAR_AND_METHOD_DECLARATION)

    VAR_AND_METHOD_DECLARATION  переход в состояние 34
    VAR_DECLARATION             переход в состояние 24
    METHOD_DECLARATION          переход в состояние 25
    METHOD_HEADER               переход в состояние 26
    TYPE                        переход в состояние 27
    INT_ARRAY                   переход в состояние 28


State 26

   12 METHOD_DECLARATION: METHOD_HEADER . '{' METHOD_BODY '}'

    '{'  сдвиг, и переход в состояние 35


State 27

   11 VAR_DECLARATION: TYPE . ID ';'

    ID  сдвиг, и переход в состояние 36


State 28

   18 TYPE: INT_ARRAY .

    $default  вывод с использованием правила 18 (TYPE)


State 29

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' . MAIN_ARGS ID ')' '{' STATEMENT '}' '}'

    MAIN_ARGS  сдвиг, и переход в состояние 37


State 30

   13 METHOD_HEADER: PUBLIC TYPE . ID '(' ARGS_DECLARATION ')'

    ID  сдвиг, и переход в состояние 38


State 31

   22 INT_ARRAY: INT '[' . ']'

    ']'  сдвиг, и переход в состояние 39


State 32

    5 CLASS_DECLARATION: CLASS ID BASE_CLASS '{' VAR_AND_METHOD_DECLARATION '}' .

    $default  вывод с использованием правила 5 (CLASS_DECLARATION)


State 33

    8 VAR_AND_METHOD_DECLARATION: VAR_DECLARATION VAR_AND_METHOD_DECLARATION .

    $default  вывод с использованием правила 8 (VAR_AND_METHOD_DECLARATION)


State 34

    9 VAR_AND_METHOD_DECLARATION: METHOD_DECLARATION VAR_AND_METHOD_DECLARATION .

    $default  вывод с использованием правила 9 (VAR_AND_METHOD_DECLARATION)


State 35

   12 METHOD_DECLARATION: METHOD_HEADER '{' . METHOD_BODY '}'

    WHILE  сдвиг, и переход в состояние 40
    PRINT  сдвиг, и переход в состояние 41
    INT    сдвиг, и переход в состояние 20
    BOOL   сдвиг, и переход в состояние 21
    ID     сдвиг, и переход в состояние 42
    IF     сдвиг, и переход в состояние 43
    '{'    сдвиг, и переход в состояние 44

    $default  вывод с использованием правила 27 (STATEMENT_DECLARATION)

    VAR_DECLARATION                 переход в состояние 45
    TYPE                            переход в состояние 27
    INT_ARRAY                       переход в состояние 28
    METHOD_BODY                     переход в состояние 46
    VAR_AND_STATEMENT_DECLARATIONS  переход в состояние 47
    STATEMENT_DECLARATION           переход в состояние 48
    STATEMENT                       переход в состояние 49
    IF_STATEMENT                    переход в состояние 50
    WHILE_STATEMENT                 переход в состояние 51
    PRINT_STATEMENT                 переход в состояние 52
    ASSIGNMENT                      переход в состояние 53
    ARRAY_ASSIGNMENT                переход в состояние 54


State 36

   11 VAR_DECLARATION: TYPE ID . ';'

    ';'  сдвиг, и переход в состояние 55


State 37

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' MAIN_ARGS . ID ')' '{' STATEMENT '}' '}'

    ID  сдвиг, и переход в состояние 56


State 38

   13 METHOD_HEADER: PUBLIC TYPE ID . '(' ARGS_DECLARATION ')'

    '('  сдвиг, и переход в состояние 57


State 39

   22 INT_ARRAY: INT '[' ']' .

    $default  вывод с использованием правила 22 (INT_ARRAY)


State 40

   35 WHILE_STATEMENT: WHILE . '(' EXPR ')' STATEMENT

    '('  сдвиг, и переход в состояние 58


State 41

   36 PRINT_STATEMENT: PRINT . '(' EXPR ')' ';'

    '('  сдвиг, и переход в состояние 59


State 42

   21 TYPE: ID .
   37 ASSIGNMENT: ID . '=' EXPR ';'
   38 ARRAY_ASSIGNMENT: ID . '[' EXPR ']' '=' EXPR ';'

    '['  сдвиг, и переход в состояние 60
    '='  сдвиг, и переход в состояние 61

    $default  вывод с использованием правила 21 (TYPE)


State 43

   34 IF_STATEMENT: IF . '(' EXPR ')' STATEMENT ELSE STATEMENT

    '('  сдвиг, и переход в состояние 62


State 44

   28 STATEMENT: '{' . STATEMENT_DECLARATION '}'

    WHILE  сдвиг, и переход в состояние 40
    PRINT  сдвиг, и переход в состояние 41
    ID     сдвиг, и переход в состояние 63
    IF     сдвиг, и переход в состояние 43
    '{'    сдвиг, и переход в состояние 44

    $default  вывод с использованием правила 27 (STATEMENT_DECLARATION)

    STATEMENT_DECLARATION  переход в состояние 64
    STATEMENT              переход в состояние 49
    IF_STATEMENT           переход в состояние 50
    WHILE_STATEMENT        переход в состояние 51
    PRINT_STATEMENT        переход в состояние 52
    ASSIGNMENT             переход в состояние 53
    ARRAY_ASSIGNMENT       переход в состояние 54


State 45

   24 VAR_AND_STATEMENT_DECLARATIONS: VAR_DECLARATION . VAR_AND_STATEMENT_DECLARATIONS

    WHILE  сдвиг, и переход в состояние 40
    PRINT  сдвиг, и переход в состояние 41
    INT    сдвиг, и переход в состояние 20
    BOOL   сдвиг, и переход в состояние 21
    ID     сдвиг, и переход в состояние 42
    IF     сдвиг, и переход в состояние 43
    '{'    сдвиг, и переход в состояние 44

    $default  вывод с использованием правила 27 (STATEMENT_DECLARATION)

    VAR_DECLARATION                 переход в состояние 45
    TYPE                            переход в состояние 27
    INT_ARRAY                       переход в состояние 28
    VAR_AND_STATEMENT_DECLARATIONS  переход в состояние 65
    STATEMENT_DECLARATION           переход в состояние 48
    STATEMENT                       переход в состояние 49
    IF_STATEMENT                    переход в состояние 50
    WHILE_STATEMENT                 переход в состояние 51
    PRINT_STATEMENT                 переход в состояние 52
    ASSIGNMENT                      переход в состояние 53
    ARRAY_ASSIGNMENT                переход в состояние 54


State 46

   12 METHOD_DECLARATION: METHOD_HEADER '{' METHOD_BODY . '}'

    '}'  сдвиг, и переход в состояние 66


State 47

   23 METHOD_BODY: VAR_AND_STATEMENT_DECLARATIONS . RETURN EXPR ';'

    RETURN  сдвиг, и переход в состояние 67


State 48

   25 VAR_AND_STATEMENT_DECLARATIONS: STATEMENT_DECLARATION .

    $default  вывод с использованием правила 25 (VAR_AND_STATEMENT_DECLARATIONS)


State 49

   26 STATEMENT_DECLARATION: STATEMENT . STATEMENT_DECLARATION

    WHILE  сдвиг, и переход в состояние 40
    PRINT  сдвиг, и переход в состояние 41
    ID     сдвиг, и переход в состояние 63
    IF     сдвиг, и переход в состояние 43
    '{'    сдвиг, и переход в состояние 44

    $default  вывод с использованием правила 27 (STATEMENT_DECLARATION)

    STATEMENT_DECLARATION  переход в состояние 68
    STATEMENT              переход в состояние 49
    IF_STATEMENT           переход в состояние 50
    WHILE_STATEMENT        переход в состояние 51
    PRINT_STATEMENT        переход в состояние 52
    ASSIGNMENT             переход в состояние 53
    ARRAY_ASSIGNMENT       переход в состояние 54


State 50

   29 STATEMENT: IF_STATEMENT .

    $default  вывод с использованием правила 29 (STATEMENT)


State 51

   30 STATEMENT: WHILE_STATEMENT .

    $default  вывод с использованием правила 30 (STATEMENT)


State 52

   31 STATEMENT: PRINT_STATEMENT .

    $default  вывод с использованием правила 31 (STATEMENT)


State 53

   32 STATEMENT: ASSIGNMENT .

    $default  вывод с использованием правила 32 (STATEMENT)


State 54

   33 STATEMENT: ARRAY_ASSIGNMENT .

    $default  вывод с использованием правила 33 (STATEMENT)


State 55

   11 VAR_DECLARATION: TYPE ID ';' .

    $default  вывод с использованием правила 11 (VAR_DECLARATION)


State 56

    4 MAIN_CLASS: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' MAIN_ARGS ID . ')' '{' STATEMENT '}' '}'

    ')'  сдвиг, и переход в состояние 69


State 57

   13 METHOD_HEADER: PUBLIC TYPE ID '(' . ARGS_DECLARATION ')'

    INT   сдвиг, и переход в состояние 20
    BOOL  сдвиг, и переход в состояние 21
    ID    сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 17 (PARAM_DECLARATION)

    ARGS_DECLARATION   переход в состояние 70
    PARAM_DECLARATION  переход в состояние 71
    TYPE               переход в состояние 72
    INT_ARRAY          переход в состояние 28


State 58

   35 WHILE_STATEMENT: WHILE '(' . EXPR ')' STATEMENT

    NEW         сдвиг, и переход в состояние 73
    THIS        сдвиг, и переход в состояние 74
    ID          сдвиг, и переход в состояние 75
    INT_VALUE   сдвиг, и переход в состояние 76
    BOOL_VALUE  сдвиг, и переход в состояние 77
    NOT         сдвиг, и переход в состояние 78
    '('         сдвиг, и переход в состояние 79

    EXPR      переход в состояние 80
    CONSTANT  переход в состояние 81
    NEW_EXPR  переход в состояние 82


State 59

   36 PRINT_STATEMENT: PRINT '(' . EXPR ')' ';'

    NEW         сдвиг, и переход в состояние 73
    THIS        сдвиг, и переход в состояние 74
    ID          сдвиг, и переход в состояние 75
    INT_VALUE   сдвиг, и переход в состояние 76
    BOOL_VALUE  сдвиг, и переход в состояние 77
    NOT         сдвиг, и переход в состояние 78
    '('         сдвиг, и переход в состояние 79

    EXPR      переход в состояние 83
    CONSTANT  переход в состояние 81
    NEW_EXPR  переход в состояние 82


State 60

   38 ARRAY_ASSIGNMENT: ID '[' . EXPR ']' '=' EXPR ';'

    NEW         сдвиг, и переход в состояние 73
    THIS        сдвиг, и переход в состояние 74
    ID          сдвиг, и переход в состояние 75
    INT_VALUE   сдвиг, и переход в состояние 76
    BOOL_VALUE  сдвиг, и переход в состояние 77
    NOT         сдвиг, и переход в состояние 78
    '('         сдвиг, и переход в состояние 79

    EXPR      переход в состояние 84
    CONSTANT  переход в состояние 81
    NEW_EXPR  переход в состояние 82


State 61

   37 ASSIGNMENT: ID '=' . EXPR ';'

    NEW         сдвиг, и переход в состояние 73
    THIS        сдвиг, и переход в состояние 74
    ID          сдвиг, и переход в состояние 75
    INT_VALUE   сдвиг, и переход в состояние 76
    BOOL_VALUE  сдвиг, и переход в состояние 77
    NOT         сдвиг, и переход в состояние 78
    '('         сдвиг, и переход в состояние 79
